crates/alder-driver/src/report/snapshots/alder_driver__report__syntax_tests__pattern_alias.snap
---
source: crates/alder-driver/src/report/syntax_tests.rs
description: let x as = value
---
alder::syntax

  × I was expecting a binding name after `as`
   ╭─[/project/src/main.ald:1:10]
 1 │ let x as = value
   · ┬        ┬
   · │        ╰── expected a lower-case name
   · ╰── this binding starts here
   ╰────
