crates/alder-driver/src/report/snapshots/alder_driver__report__syntax_tests__pattern_reserved.snap
---
source: crates/alder-driver/src/report/syntax_tests.rs
description: let match = x
---
alder::syntax

  × `match` is reserved and cannot be used as a pattern
   ╭─[/project/src/main.ald:1:5]
 1 │ let match = x
   · ┬   ──┬──
   · │     ╰── reserved word used here
   · ╰── this binding starts here
   ╰────
