crates/alder-driver/src/report/snapshots/alder_driver__report__syntax_tests__query_clause_order.snap
---
source: crates/alder-driver/src/report/syntax_tests.rs
description: "let value = query { select * from users orderBy name where active }"
---
alder::syntax

  × the `where` clause cannot appear here
   ╭─[/project/src/main.ald:1:54]
 1 │ let value = query { select * from users orderBy name where active }
   ·             ┬                                        ┬
   ·             │                                        ╰── this clause is repeated, out of order, or not allowed for this operation
   ·             ╰── this query starts here
   ╰────
  help: select clauses follow `from`, joins, `where`, `groupBy`, `orderBy`,
        `limit`, `offset`; only joins may repeat. Update/delete allow one
        `where`; insert has no trailing clauses
